# ci_testing

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yaml
